force-app/main/default/objects/Knowledge_Article__c/Knowledge_Article__c.object-meta.xml
<CustomObject>
    <label>Knowledge Article</label>
    <nameField>
        <displayFormat>KA-{0000000000}</displayFormat>
        <label>Knowledge Article Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Knowledge Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>