force-app/main/default/objects/Knowledge_Article__c/fields/ArchivedDate__c.field-meta.xml
<CustomField>
    <fullName>ArchivedDate__c</fullName>
    <label>Archived Date</label>
    <type>DateTime</type>
</CustomField>