force-app/main/default/objects/Knowledge_Article__c/fields/ArticleNumber__c.field-meta.xml
<CustomField>
    <fullName>ArticleNumber__c</fullName>
    <displayFormat>{000000000}</displayFormat>
    <label>Article Number</label>
    <type>AutoNumber</type>
</CustomField>