force-app/main/default/objects/Knowledge_Article__c/fields/CaseAssociationCount__c.field-meta.xml
<CustomField>
    <fullName>CaseAssociationCount__c</fullName>
    <label>Case Association Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>