force-app/main/default/objects/Knowledge_Article__c/fields/IsGeneratedByLlm__c.field-meta.xml
<CustomField>
    <fullName>IsGeneratedByLlm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generated by LLM</label>
    <type>Checkbox</type>
</CustomField>