force-app/main/default/objects/Knowledge_Article__c/fields/LastReferencedDate__c.field-meta.xml
<CustomField>
    <fullName>LastReferencedDate__c</fullName>
    <label>Last Referenced Date</label>
    <type>DateTime</type>
</CustomField>