force-app/main/default/objects/Knowledge_Article__c/fields/LastViewedDate__c.field-meta.xml
<CustomField>
    <fullName>LastViewedDate__c</fullName>
    <label>Last Viewed Date</label>
    <type>DateTime</type>
</CustomField>