force-app/main/default/objects/Knowledge_Article__c/fields/MigratedToFromArticle__c.field-meta.xml
<CustomField>
    <fullName>MigratedToFromArticle__c</fullName>
    <label>Migrated Article Mapping</label>
    <length>15</length>
    <type>Text</type>
</CustomField>