force-app/main/default/objects/Knowledge_Article__c/fields/TotalViewCount__c.field-meta.xml
<CustomField>
    <fullName>TotalViewCount__c</fullName>
    <label>Total View Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>